/*
 * test_records_double_nested.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2019 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record.test.doublenested;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsDoubleNestedProto";

import "record_metadata_options.proto";

message OuterRecord {
    message MiddleRecord {
        message InnerRecord {
            optional int64 foo = 1;
            optional string bar = 2;
            optional foundationdb.record.test.doublenested.OtherRecord other = 3;
            optional doublenested.OuterRecord outer = 4;
        }
        repeated OuterRecord.MiddleRecord.InnerRecord inner = 1;
        optional OtherRecord other = 2;
        optional int64 other_int = 3;
    }
    optional int64 rec_no = 1 [(field).primary_key = true];
    optional MiddleRecord middle = 2;
    repeated MiddleRecord.InnerRecord inner = 3;
    optional OtherRecord other = 4;
    repeated MiddleRecord many_middle = 5;
    optional int64 other_int = 6;
}

message OtherRecord {
    optional OuterRecord outer = 1;
}

message MiddleRecord {
    optional int64 rec_no = 1 [(field).primary_key = true];
    optional MiddleRecord middle = 2;
    optional OuterRecord.MiddleRecord other_middle = 3;
    optional int64 other_int = 4;
}

message RecordTypeUnion {
    optional OuterRecord _OuterRecord = 1;
    optional MiddleRecord _MiddleRecord = 2;
}
